Fix picture extension

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="/pictures/profile.jpg"
+      <img src="/pictures/profile_pic.jpg"
       <h1>
         <a class="blog-name" href="{{ site.baseurl }}">
           {{ site.title }}
