--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -4,7 +4,7 @@
      * CONFIGURATION VARIABLES
      */
 
-     var disqus_shortname = 'sweetlifeofdana'; // required: replace example with your forum shortname
+     var disqus_shortname = 'sweetlifeofdana';
     //  var disqus_developer = 1; // Comment out when the site is live
      var disqus_url = '{{ page. url }}'
 
