--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,13 +5,8 @@
     <h2 class="footer-heading">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-        </ul>
-      </div>
 
-      <div class="footer-col  footer-col-2">
+      <div class="footer-col  footer-col-1">
         <ul class="social-media-list">
           {% if site.twitter_username %}
           <li>
@@ -27,7 +22,10 @@
             </a>
           </li>
           {% endif %}
-
+        </ul>
+      </div>
+      <div class="footer-col  footer-col-2">
+        <ul class="social-media-list">
           {% if site.instagram_username %}
           <li>
             <a href="https://instagram.com/{{ site.twitter_username }}">
