--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,13 @@
     <h2 class="footer-heading">{{ site.title }}</h2>
 
     <div class="footer-col-wrapper">
-
       <div class="footer-col  footer-col-1">
+        <ul class="contact-list">
+          <li>{{ site.title }}</li>
+        </ul>
+      </div>
+
+      <div class="footer-col  footer-col-2">
         <ul class="social-media-list">
           {% if site.twitter_username %}
           <li>
@@ -22,10 +27,7 @@
             </a>
           </li>
           {% endif %}
-        </ul>
-      </div>
-      <div class="footer-col  footer-col-2">
-        <ul class="social-media-list">
+
           {% if site.instagram_username %}
           <li>
             <a href="https://instagram.com/{{ site.twitter_username }}">
